--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <h1>Teaching Portal</h1>
     <p>Select a course:</p>
     <ul>
-      <li><a href="./teaching/eart22001/eart22001_course.php">EART22001 Course Page</a></li>
-      <li><a href="./teaching/eart60071/eart60071_course.php">EART60071 Course Page</a></li>
+      <li><a href="./teaching/eart22001/eart22001_course.html">EART22001 Course Page</a></li>
+      <li><a href="./teaching/eart60071/eart60071_course.html">EART60071 Course Page</a></li>
     </ul>
   </div>
 </body>
